Mejora de la traza de error, del JavaDoc y autocierre de flujos